# autoresearch_1

envsci/: prepare.py  program.md  pyproject.toml  train.py
mt_wheat/: .gitignore  OPTION_A_SETUP.md  OPTION_C_SETUP.md  QUICKSTART.md  WORKFLOW.md  config.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
