[project]
name = "autoresearch-envsci"
version = "0.1.0"
description = "Autonomous AI research for environmental science - crop yield prediction"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1.0",
        "numpy>=1.24.0",
            "requests>=2.28.0",
            ]

            [build-system]
            requires = ["hatchling"]
            build-backend = "hatchling.build"
