[project]
name = "mt-wheat-yield"
version = "0.1.0"
description = "Montana wheat yield prediction with enriched features"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
